[package]
name = "simple-unit-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12.0", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.6", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
lazy_static = "1.4.0"
regex = "1.7.1"